fix pom file